# ebq

./: .env.example  .gitignore  .htaccess  CLAUDE.local.md  CLAUDE.md  DATABASE_SCALING_PLAN.md  PageAuditReport::where('website_id',$wid)->where('status','completed')->latest('audited_at')->first(); $cpa  README.md  SHARDING_PLAN.md  audit.txt  composer.json  docker-compose.ephemeral.yml  home.html  package-lock.json  package.json  phpunit.xml  research_doc.txt  resume.txt  vite.config.js
.claude/: settings.json  settings.local.json
arch/: README.md  crawl-pipeline.md  deployment-and-queues.md  shared-crawl.md
bootstrap/: app.php
config/: app.php  audit.php  crawler.php  database.php  fleet.php  horizon.php  mail.php  reports.php  research.php  sentry.php  services.php
docs/: features.md  plugin-roadmap.md  plugin.txt  research-section-plan.md  research-system.docx
ebq-seo-wp/: ebq-seo.php  package-lock.json  package.json  (+2 more)
tools/competitor-scraper/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
tools/competitor-scraper/competitor_scraper/: __init__.py  cli.py  runner.py  settings.py
tools/competitor-scraper/competitor_scraper/crawler/: middlewares.py  pipelines.py  spider.py
tools/competitor-scraper/competitor_scraper/extractors/: content.py  keywords.py  seed_coverage.py  topics.py
tools/competitor-scraper/competitor_scraper/storage/: flush.py  laravel_env.py  progress.py  reflect.py  scratch.py
tools/competitor-scraper/tests/: test_extractors.py  test_keywords.py  test_laravel_env.py  test_seed_coverage.py  test_topics.py
(+1242 files in other folders)
